tests/ui/bad_value3.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    unit = 1,
}]
fn test() {}

fn main() {}
